Stylesheet/emote/tag updates 2016-05-20

--- a/source-css/equestriagirls.css
+++ b/source-css/equestriagirls.css
@@ -16,7 +16,7 @@
 {
  color:gray!important;
  font-size:13px!important;
- content:"CANTERLOT HIGH FACULTY";
+ content:"CHS FACULTY";
  display:inline-block
 }
 
