--- a/source-css/mlploungesteamgroup.css
+++ b/source-css/mlploungesteamgroup.css
@@ -389,6 +389,7 @@ a.author[href$="thepostaldud3"]:before {content: "steev"}
 a.author[href$="TheJBW"]:before {content: "So?"}
 
 
+
 /*Names for extra text go here */
 a.author[href$="Sangfroidish"]:after,
 a.author[href$="DoomedCivilian"]:after,
@@ -405,6 +406,7 @@ a.author[href$="starkinmn"]:after,
 a.author[href$="TheCommieDuck"]:after,
 a.author[href$="Broken_Wagonwheel"]:after,
 a.author[href$="Ubahootah"]:after,
+a.author[href$="StupidSexyConnor"]:before,
 a.author[href$="Dundrioundio"]:after
 
 {   border-radius: 4px;
@@ -433,6 +435,7 @@ a.author[href$="moonomnom"]:after {content: " Dayum shame"}
 a.author[href$="Broken_Wagonwheel"]:after {content: " Sang's Slave "}
 a.author[href$="Ubahootah"]:after {content: " Yep "}
 a.author[href$="Dundrioundio"]:after {content: " Never cuddle "}
+a.author[href$="StupidSexyConnor"]:before {content: " Guests - "}
 
 /* This is to append something to everyone. Remove comments to activate*/
 /*
