--- a/source-css/ponymotesextra2.css
+++ b/source-css/ponymotesextra2.css
@@ -62,3 +62,4 @@ a[href|="/implightsparkle"], a[href|="/implylightsparkle"] {background:url(%%imp
 a[href|="/bownom"] {background:url(%%bownom%%) no-repeat;width:100px;height:90px;display:block;float:left;}
 a[href|="/sillywater"] {background:url(%%sillywater%%) no-repeat;width:150px;height:86px;display:block;float:left;}
 a[href|="/sonatapopcorn"] {background:url(%%sonatapopcorn%%) no-repeat;width:108px;height:150px;display:block;float:left;}
+a[href|="/ponkblep"] {background:url(%%ponkblep%%) no-repeat;width:100px;height:96px;display:block;float:left;}
