--- a/source-css/starlightglimmer.css
+++ b/source-css/starlightglimmer.css
@@ -602,7 +602,7 @@ a[href|="/applederp"],a[href|="/rapplederp"],a[href|="/ppseesyou"],a[href|="/rpp
 
 /*---------------- END COPY ----------------*/
 
-a[href|="/starlightsmirk"], a[href|="/sgsmirk"], a[href|="/starlightwhat"], a[href|="/sgwhat"], a[href|="/starlighthappy"], a[href|="/sghappy"], a[href|="/starlighthuman"], a[href|="/sghuman"], a[href|="/fillystarlight"], a[href|="/fillysg"], a[href|="/cutestarlight"], a[href|="/cutesg"], a[href|="/sugarbellesg"], a[href|="/equalsugarbellesg"], a[href|="/equalsbsg"], a[href|="/equalstaff"], a[href|="/nightglidersg"], a[href|="/equalnightglidersg"], a[href|="/equalngsg"], a[href|="/binoculars"], a[href|="/equalpartyfavorsg"], a[href|="/equalpfsg"], a[href|="/doublediamondsg"], a[href|="/doubledsg"], a[href|="/partyfavorsg"], a[href|="/starlightright"], a[href|="/sgright"], a[href|="/starlightfacehoof"], a[href|="/sgfacehoof"], a[href|="/starlightsalute"], a[href|="/sgsalute"], a[href|="/starlightshrug"], a[href|="/sgshrug"], a[href|="/starlightscrunch"], a[href|="/sgscrunch"] {
+a[href|="/starlightsmirk"], a[href|="/sgsmirk"], a[href|="/starlightwhat"], a[href|="/sgwhat"], a[href|="/starlighthappy"], a[href|="/sghappy"], a[href|="/starlighthuman"], a[href|="/sghuman"], a[href|="/fillystarlight"], a[href|="/fillysg"], a[href|="/cutestarlight"], a[href|="/cutesg"], a[href|="/sugarbellesg"], a[href|="/equalsugarbellesg"], a[href|="/equalsbsg"], a[href|="/equalstaff"], a[href|="/nightglidersg"], a[href|="/equalnightglidersg"], a[href|="/equalngsg"], a[href|="/binoculars"], a[href|="/equalpartyfavorsg"], a[href|="/equalpfsg"], a[href|="/doublediamondsg"], a[href|="/doubledsg"], a[href|="/partyfavorsg"], a[href|="/starlightright"], a[href|="/sgright"], a[href|="/starlightfacehoof"], a[href|="/sgfacehoof"], a[href|="/starlightsalute"], a[href|="/sgsalute"], a[href|="/starlightshrug"], a[href|="/sgshrug"], a[href|="/starlightscrunch"], a[href|="/sgscrunch"], a[href|="/nervousstarlight"], a[href|="/nervoussg"], a[href|="/starlightunsure"], a[href|="/sgunsure"], a[href|="/starlightblush"], a[href|="/sgblush"], a[href|="/starlightgrimmer"], a[href|="/sggrimmer"], a[href|="/undercoverstarlight"], a[href|="/undercoversg"], a[href|="/starlightmenu"], a[href|="/sgmenu"], a[href|="/starlightworry"], a[href|="/sgworry"] {
     display: block;
     clear: none;
     float: left;
@@ -611,28 +611,34 @@ a[href|="/starlightsmirk"], a[href|="/sgsmirk"], a[href|="/starlightwhat"], a[hr
     background-image: url(%%sgmotes%%) !important;
 }
 
-a[href|="/starlightsmirk"], a[href|="/sgsmirk"] { background-position: -0px -0px; }
-a[href|="/starlightwhat"], a[href|="/sgwhat"] { background-position: -70px -0px; }
-a[href|="/starlighthappy"], a[href|="/sghappy"] { background-position: -140px -0px; }
-a[href|="/starlighthuman"], a[href|="/sghuman"] { background-position: -210px -0px; }
-a[href|="/fillystarlight"], a[href|="/fillysg"] { background-position: -0px -70px; }
+a[href|="/starlightsmirk"], a[href|="/sgsmirk"] { background-position: 0 0; }
+a[href|="/starlightwhat"], a[href|="/sgwhat"] { background-position: -70px 0; }
+a[href|="/starlighthappy"], a[href|="/sghappy"] { background-position: -140px 0; }
+a[href|="/starlighthuman"], a[href|="/sghuman"] { background-position: -210px 0; }
+a[href|="/fillystarlight"], a[href|="/fillysg"] { background-position: 0 -70px; }
 a[href|="/cutestarlight"], a[href|="/cutesg"] { background-position: -70px -70px; }
 a[href|="/sugarbellesg"] { background-position: -140px -70px; }
 a[href|="/equalsugarbellesg"], a[href|="/equalsbsg"] { background-position: -210px -70px; }
-a[href|="/equalstaff"] { background-position: -0px -140px; height: 140px; }
+a[href|="/equalstaff"] { background-position: 0 -140px; height: 140px; }
 a[href|="/nightglidersg"] { background-position: -70px -140px; }
 a[href|="/equalnightglidersg"], a[href|="/equalngsg"] { background-position: -140px -140px; }
 a[href|="/binoculars"] { background-position: -210px -140px; }
 a[href|="/equalpartyfavorsg"], a[href|="/equalpfsg"] { background-position: -70px -210px; }
 a[href|="/doublediamondsg"], a[href|="/doubledsg"] { background-position: -140px -210px; }
 a[href|="/partyfavorsg"] { background-position: -210px -210px; }
-a[href|="/starlightright"], a[href|="/sgright"] { background-position: -0px -280px; }
+a[href|="/starlightright"], a[href|="/sgright"] { background-position: 0 -280px; }
 a[href|="/starlightfacehoof"], a[href|="/sgfacehoof"] { background-position: -70px -280px; }
 a[href|="/starlightsalute"], a[href|="/sgsalute"] { background-position: -140px -280px; }
 a[href|="/starlightshrug"], a[href|="/sgshrug"] { background-position: -210px -280px; }
-a[href|="/starlightscrunch"], a[href|="/sgscrunch"] { background-position: -0px -350px; }
+a[href|="/starlightscrunch"], a[href|="/sgscrunch"] { background-position: 0 -350px; }
+a[href|="/nervousstarlight"], a[href|="/nervoussg"] { background-position: -70px -350px; }
+a[href|="/starlightunsure"], a[href|="/sgunsure"] { background-position: -140px -350px; }
+a[href|="/starlightblush"], a[href|="/sgblush"] { background-position: -210px -350px; }
+a[href|="/starlightgrimmer"], a[href|="/sggrimmer"] { background-position: 0 -420px; }
+a[href|="/undercoverstarlight"], a[href|="/undercoversg"], a[href|="/starlightmenu"], a[href|="/sgmenu"] { background-position: -70px -420px; }
+a[href|="/starlightworry"], a[href|="/sgworry"] { background-position: -140px -420px; }
 
-a[href|="/starlightpoker"], a[href|="/sgpoker"], a[href|="/starlightpetme"], a[href|="/sgpetme"] {
+a[href|="/starlightpoker"], a[href|="/sgpoker"], a[href|="/starlightpetme"], a[href|="/sgpetme"], a[href|="/starlightrecoil"], a[href|="/sgrecoil"] {
     display: block;
     clear: none;
     float: left;
@@ -641,8 +647,9 @@ a[href|="/starlightpoker"], a[href|="/sgpoker"], a[href|="/starlightpetme"], a[h
     background-image: url(%%sgmotes100%%) !important;
 }
 
-a[href|="/starlightpoker"], a[href|="/sgpoker"] { background-position: -0px -0px; }
-a[href|="/starlightpetme"], a[href|="/sgpetme"] { background-position: -100px -0px; }
+a[href|="/starlightpoker"], a[href|="/sgpoker"] { background-position: 0 0; }
+a[href|="/starlightpetme"], a[href|="/sgpetme"] { background-position: -100px 0; }
+a[href|="/starlightrecoil"], a[href|="/sgrecoil"] { background-position: -200px 0; }
 
 a[href|="/starlightstaff"], a[href|="/sgstaff"] {
   display: block;
@@ -653,7 +660,7 @@ a[href|="/starlightstaff"], a[href|="/sgstaff"] {
   background-image: url(%%starlightstaff%%) !important;
 }
 
-a[href|="/starlightstanding"], a[href|="sgstanding"] {
+a[href|="/starlightstanding"], a[href|="/sgstanding"] {
   display: block;
   clear: none;
   float: left;
@@ -662,13 +669,22 @@ a[href|="/starlightstanding"], a[href|="sgstanding"] {
   background-image: url(%%starlightstanding%%) !important;
 }
 
-a[href|="/starlighttrotting"], a[href|="sgtrotting"] {
+a[href|="/starlighttrotting"], a[href|="/sgtrotting"] {
   display: block;
   clear: none;
   float: left;
   width: 80px;
   height: 94px;
   background-image: url(%%starlighttrotting%%) !important;
+}
+
+a[href|="/starlightpopcorna"], a[href|="/sgpopcorna"] {
+  display: block;
+  clear: none;
+  float: left;
+  width: 108px;
+  height: 104px;
+  background-image: url(%%sgpopcorn%%) !important;
 }
 
 START-PONYSCRIPT-IGNORE { color: red; }
