--- a/minified-css/ponycountdown.css
+++ b/minified-css/ponycountdown.css
@@ -1,1 +1,1 @@
-a[href|="/countdown"]{display:block;clear:none;float:left;width:300px;height:60px;background-image:url("//b.thumbs.redditmedia.com/umusZp5pAMjq85kyEbCjZXa3SHTMS4gRtelDIvCiqDo.png")}
+a[href|="/countdown"]{display:block;clear:none;float:left;width:300px;height:60px;background-image:url("//a.thumbs.redditmedia.com/Z-36P8VdUYXtpHVQz2_omd8TwV2n06qFLMZCfTohrD8.png")}
