--- a/source-css/mlpccg.css
+++ b/source-css/mlpccg.css
@@ -958,169 +958,351 @@ body:not(.moderator) div.content .flairselectbtn
     overflow: hidden;
     text-indent: -9999px;
     }
-.flair-rainbowdash {
-    background-position: 0px 0px
-    }
-.flair-twilight {
-    background-position: -16px 0px
-    }
-.flair-fluttershy {
-    background-position: 0px -16px
-    }
-.flair-applejack {
-    background-position: -16px -16px
-    }
-.flair-pinkiepie {
-    background-position: 0px -32px
-    }
-.flair-pinkiepiecmc {
-    background-position: 0px -32px
-    }
-.flair-rarity {
-    background-position: -16px -32px
-    }
-.flair-trixie {
-    background-position: 0px -48px
-    }
-.flair-cmc {
-    background-position: -16px -48px
-    }
-.flair-cmcchinchy {
-    background-position: -16px -48px;
-    margin-left: 5px
-    }
-.flair-luna {
-    background-position: 0px -64px
-    }
-.flair-celestia {
-    background-position: -16px -64px
-    }
-.flair-derpy {
-    background-position: 0px -80px
-    }
-.flair-vinyl {
-    background-position: -16px -80px
-    }
-.flair-lyra {
-    background-position: 0px -96px
-    }
-.flair-bonbon {
-    background-position: -16px -96px
-    }
-.flair-octavia {
-    background-position: 0px -112px
-    }
-.flair-doctor {
-    background-position: -16px -112px
-    }
-.flair-mac {
-    background-position: 0px -128px
-    }
-.flair-colgate {
-    background-position: -16px -128px
-    }
-.flair-berry {
-    background-position: -0px -144px
-    }
-.flair-pokey {
-    background-position: -16px -144px
-    }
-.flair-roseluck {
-    background-position: -0px -160px
-    }
-.flair-zecora {
-    background-position: -16px -160px
-    }
-.flair-seafoam {
-    background-position: -0px -176px
-    }
-.flair-carrottop {
-    background-position: -16px -176px
-    }
-.flair-screwball {
-    background-position: -0px -192px
-    }
-.flair-redheart {
-    background-position: -16px -192px
-    }
-.flair-caramel {
-    background-position: -0px -208px
-    }
-.flair-braeburn {
-    background-position: -16px -208px
-    }
-.flair-wonderbolts {
-    background-position: -0px -224px
-    }
-.flair-shadowbolts {
-    background-position: -16px -224px
-    }
-.flair-scootaloo {
-    background-position: -0px -240px
-    }
-.flair-applebloom {
-    background-position: -16px -240px
-    }
-.flair-sweetiebelle {
-    background-position: -0px -256px
-    }
-.flair-davenport {
-    background-position: -16px -256px
-    }
-.flair-cheerilee {
-    background-position: -0px -272px
-    }
-.flair-nightmaremoon {
-    background-position: -16px -272px
-    }
-.flair-blueblood {
-    background-position: -0px -288px
-    }
-.flair-daring {
-    background-position: -16px -288px
-    }
-.flair-mrcake {
-    background-position: -0px -304px
-    }
-.flair-mrscake {
-    background-position: -16px -304px
-    }
-.flair-flam {
-    background-position: -0px -320px
-    }
-.flair-flim {
-    background-position: -16px -320px
-    }
-.flair-silverspoon {
-    background-position: -0px -336px
-    }
-.flair-diamondtiara {
-    background-position: -16px -336px
-    }
-.flair-snips {
-    background-position: -0px -352px
-    }
-.flair-snails {
-    background-position: -16px -352px
-    }
-.flair-twist {
-    background-position: -0px -368px
-    }
-.flair-gaben {
-    background-position: -16px -368px
-    }
-.flair-sparkler {
-    background-position: -0px -384px
-    }
-.flair-disco {
-    background-position: -16px -384px
-    }
-.flair-fancypants {
-    background-position: -0px -400px
-    }
-.flair-fleur {
-    background-position: -16px -400px
-    }
+.flair-rainbowdash 
+{background-position:0 0}
+
+.flair-pinkiepie
+{background-position:0 -100%}
+
+.flair-luna
+{background-position:0 -200%}
+
+.flair-lyra
+{background-position:0 -300%}
+
+.flair-mac
+{background-position:0 -400%}
+
+.flair-roseluck
+{background-position:0 -500%}
+
+.flair-screwball
+{background-position:0 -600%}
+
+.flair-wonderbolts
+{background-position:0 -700%}
+
+.flair-sweetiebelle
+{background-position:0 -800%}
+
+.flair-blueblood
+{background-position:0 -900%}
+
+.flair-flam
+{background-position:0 -1000%}
+
+.flair-snips
+{background-position:0 -1100%}
+
+.flair-sparkler
+{background-position:0 -1200%}
+
+.flair-cadence
+{background-position:0 -1300%}
+
+.flair-cloudchaser
+{background-position:0 -1400%}
+
+.flair-daisy
+{background-position:0 -1500%}
+
+.flair-drstable
+{background-position:0 -1600%}
+
+.flair-silverstar
+{background-position:0 -1700%}
+
+.flair-sunsetshimmer
+{background-position:0 -1800%}
+
+.flair-thunderlane
+{background-position:0 -1900%}
+
+.flair-starlightglimmer
+{background-position:0 -2000%}
+
+.flair-nightglider
+{background-position:0 -2100%}
+
+.flair-troubleshoes
+{background-position:0 -2200%}
+
+.flair-photofinish
+{background-position:0 -2300%}
+
+.flair-adagiodazzle
+{background-position:0 -2400%}
+
+.flair-igneousrock
+{background-position:0 -2500%}
+
+.flair-coloratura
+{background-position:0 -2600%}
+
+.flair-sugarcoat
+{background-position:0 -2700%}
+
+.flair-twilight
+{background-position:-100% 0}
+
+.flair-rarity
+{background-position:-100% -100%}
+
+.flair-celestia
+{background-position:-100% -200%}
+
+.flair-bonbon
+{background-position:-100% -300%}
+
+.flair-colgate
+{background-position:-100% -400%}
+
+.flair-zecora
+{background-position:-100% -500%}
+
+.flair-redheart
+{background-position:-100% -600%}
+
+.flair-shadowbolts
+{background-position:-100% -700%}
+
+.flair-davenport
+{background-position:-100% -800%}
+
+.flair-daring
+{background-position:-100% -900%}
+
+.flair-flim
+{background-position:-100% -1000%}
+
+.flair-snails
+{background-position:-100% -1100%}
+
+.flair-disco
+{background-position:-100% -1200%}
+
+.flair-shiningarmor
+{background-position:-100% -1300%}
+
+.flair-flitter
+{background-position:-100% -1400%}
+
+.flair-chrysalis
+{background-position:-100% -1500%}
+
+.flair-sewnsow
+{background-position:-100% -1600%}
+
+.flair-soarin
+{background-position:-100% -1700%}
+
+.flair-cheesesandwich
+{background-position:-100% -1800%}
+
+.flair-applefritter
+{background-position:-100% -1900%}
+
+.flair-equality
+{background-position:-100% -2000%}
+
+.flair-partyfavor
+{background-position:-100% -2100%}
+
+.flair-screwloose
+{background-position:-100% -2200%}
+
+.flair-lightningdust
+{background-position:-100% -2300%}
+
+.flair-ariablaze
+{background-position:-100% -2400%}
+
+.flair-cloudyquartz
+{background-position:-100% -2500%}
+
+.flair-indigozap
+{background-position:-100% -2600%}
+
+.flair-sunnyflare
+{background-position:-100% -2700%}
+
+.flair-fluttershy
+{background-position:-200% 0}
+
+.flair-trixie
+{background-position:-200% -100%}
+
+.flair-derpy
+{background-position:-200% -200%}
+
+.flair-octavia
+{background-position:-200% -300%}
+
+.flair-berry
+{background-position:-200% -400%}
+
+.flair-seafoam
+{background-position:-200% -500%}
+
+.flair-caramel
+{background-position:-200% -600%}
+
+.flair-scootaloo
+{background-position:-200% -700%}
+
+.flair-cheerilee
+{background-position:-200% -800%}
+
+.flair-mrcake
+{background-position:-200% -900%}
+
+.flair-silverspoon
+{background-position:-200% -1000%}
+
+.flair-twist
+{background-position:-200% -1100%}
+
+.flair-fancypants
+{background-position:-200% -1200%}
+
+.flair-filthyrich
+{background-position:-200% -1300%}
+
+.flair-lily
+{background-position:-200% -1400%}
+
+.flair-lotus
+{background-position:-200% -1500%}
+
+.flair-spitfire
+{background-position:-200% -1600%}
+
+.flair-maud
+{background-position:-200% -1700%}
+
+.flair-flashsentry
+{background-position:-200% -1800%}
+
+.flair-flutterbat
+{background-position:-200% -1900%}
+
+.flair-doublediamond
+{background-position:-200% -2000%}
+
+.flair-discord
+{background-position:-200% -2100%}
+
+.flair-bulkbiceps
+{background-position:-200% -2200%}
+
+.flair-babsseed
+{background-position:-200% -2300%}
+
+.flair-sonatadusk
+{background-position:-200% -2400%}
+
+.flair-limestonepie
+{background-position:-200% -2500%}
+
+.flair-lemonzest
+{background-position:-200% -2600%}
+
+.flair-sunburst
+{background-position:-200% -2700%}
+
+.flair-applejack
+{background-position:-300% 0}
+
+.flair-cmc
+{background-position:-300% -100%}
+
+.flair-vinyl
+{background-position:-300% -200%}
+
+.flair-doctor
+{background-position:-300% -300%}
+
+.flair-pokey
+{background-position:-300% -400%}
+
+.flair-carrottop
+{background-position:-300% -500%}
+
+.flair-braeburn
+{background-position:-300% -600%}
+
+.flair-applebloom
+{background-position:-300% -700%}
+
+.flair-nightmaremoon
+{background-position:-300% -800%}
+
+.flair-mrscake
+{background-position:-300% -900%}
+
+.flair-diamondtiara
+{background-position:-300% -1000%}
+
+.flair-gaben
+{background-position:-300% -1100%}
+
+.flair-fleur
+{background-position:-300% -1200%}
+
+.flair-hoitytoity
+{background-position:-300% -1300%}
+
+.flair-grannysmith
+{background-position:-300% -1400%}
+
+.flair-aloe
+{background-position:-300% -1500%}
+
+.flair-mayor
+{background-position:-300% -1600%}
+
+.flair-spike
+{background-position:-300% -1700%}
+
+.flair-coco
+{background-position:-300% -1800%}
+
+.flair-blossomforth
+{background-position:-300% -1900%}
+
+.flair-sugarbelle
+{background-position:-300% -2000%}
+
+.flair-treehugger
+{background-position:-300% -2100%}
+
+.flair-pretzel
+{background-position:-300% -2200%}
+
+.flair-cherryjubilee
+{background-position:-300% -2300%}
+
+.flair-moondancer
+{background-position:-300% -2400%}
+
+.flair-marblepie
+{background-position:-300% -2500%}
+
+.flair-soursweet
+{background-position:-300% -2600%}
+
+.flair-gilda
+{background-position:-300% -2700%}
+
+.flair-scootalooblank
+{background-position:0 -2800%}
+ 
+.flair-applebloomblank
+{background-position:-100% -2800%}
+ 
+.flair-sweetiebelleblank
+{background-position:-200% -2800%}
+
 .flair-blankflank {
     background-image: none;
     height: 0;
